2010-01-07  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.3
	* Use GLib/Gio instead GNet (LP: #503214)
	* Removed deprecated libgnome/ui dependency (LP: #503219)
	* Applied patch from Ludwig Nussel to fix compile error on glibmm 2.16.1
	* Added PES type 0x80 to be a recognised video stream
	* Fix for FTBFS on Debian GNU/Linux 5.0 (LP: #503910)
	* Removed GTK+ 2.16 requirement from UI file

2010-01-04  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.2
	* EPG now reads CVCT to get source_id (LP: #502306)
	* Added missing bit for PID calculation (LP: #502660)

2010-01-02  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.1
	* Tell demuxer to only get PMTs (LP: #501986) 

2010-01-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.0
	* Fixed faulty clean rule for new schemas file: (LP: #493132)
	* Better ATSC support
	* Added audio stream type 0x11 to PMS parser
	* Implemented make_directory_with_parents to remove dependency on GLib 2.18
	* Split out MPEG tables from DVB SI tables
	* Added recording icon to channel buttons
	* Added recording icon to EPG buttons
	* Right-click instant record on channel buttons
	* Right-click goes to scheduled recording on EPG buttons
	* Can now schedule/record/watch multiple channels on the same transponder
	* Removed broadcast feature 
	* Fixed Program Clock Reference (PCR) in PMT to get VLC support

2009-12-06  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.0.2
	* Added option to remove colon from recording filenames (LP: #491602)
	* Fixed type mismatch on show_epg_tooltips

2009-11-29  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.0.1
	* Updated intltool
	* Applied Martin Pitt's patch for duplicate ids
	* Updated include order in channels.h to allow compile in recent kernel
	* Ignoring scheduled recording check for same scheduled recording (LP: #437142)
	* Added IGNORE_SQLITE3_THREADSAFE_CHECK to disable sqlite3_threadsafe check for Hardy compile (LP: #433996)